feat : 주단위 고정근무 시 시간 수정